tests/compile_failures/events/no_net_events.stderr
error: no net events to extend, check exclude list
 --> tests/compile_failures/events/no_net_events.rs:3:1
  |
3 | #[events(form_events, exclude(form_events))]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `events` (in Nightly builds, run with -Z macro-backtrace for more info)

error: no net events to extend, check exclude list
 --> tests/compile_failures/events/no_net_events.rs:9:1
  |
9 | #[events(exclude(form_events))]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `events` (in Nightly builds, run with -Z macro-backtrace for more info)
